--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "pure-color": "^1.2.0",
     "rxjs": "5.3.0",
     "vue-rx": "^3.1.0"
   },
