--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
     "color-picker",
     "chrome-flavored"
   ],
-  "main": "dist/v-color.common.js",
-  "module": "dist/v-color.esm.js",
-  "unpkg": "dist/v-color.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "unpkg": "dist/index.js",
   "files": [
     "dist"
   ],
   "scripts": {
-    "precommit": "npm run lint",
-    "lint": "eslint ./src/*.js ./src/*.vue",
-    "server": "browser-sync start --server --reload-delay 1 --files \"index.html, ./dist/**\"",
+    "server": "browser-sync start --server --port 1126 --reload-delay 1 --files \"index.html, ./dist/**\"",
     "build:watch": "cross-env NODE_ENV=development rollup -c rollup.config.js -w",
     "build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js",
     "build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
@@ -24,29 +22,24 @@
   "devDependencies": {
     "browser-sync": "^2.18.8",
     "cross-env": "^3.1.4",
-    "cssnano": "^3.10.0",
-    "eslint": "^3.19.0",
-    "eslint-config-vue": "^2.0.2",
-    "eslint-plugin-vue": "^2.0.1",
-    "http-server": "^0.9.0",
-    "husky": "^0.13.3",
     "npm-run-all": "^4.0.1",
-    "postcss-modules": "^0.6.4",
-    "rollup": "^0.41.4",
+    "postcss-cssnext": "^3.1.0",
+    "rollup": "^0.59.2",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-postcss": "^0.2.0",
+    "rollup-plugin-postcss": "^1.6.1",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-plugin-vue": "^2.2.20",
     "rollup-watch": "^3.2.2"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "pure-color": "^1.2.0",
-    "rxjs": "5.3.0",
-    "vue-rx": "^3.1.0"
+    "invariant": "^2.2.4",
+    "lodash": "^4.17.10",
+    "object-assign": "^4.1.1",
+    "pure-color": "^1.3.0",
+    "v-ctrl": "^1.1.0"
   },
   "license": "MIT",
   "repository": {
