--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-postcss": "^1.6.1",
     "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-uglify": "^1.0.1",
-    "rollup-plugin-vue": "^2.2.20",
-    "rollup-watch": "^3.2.2"
+    "rollup-plugin-vue": "^2.2.20"
   },
   "dependencies": {
     "invariant": "^2.2.4",
