--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
-  "name": "v-color",
-  "version": "1.1.2",
-  "description": "Chrome-flavored color picker in Vue.js",
-  "keywords": [
-    "color-picker",
-    "chrome-flavored"
-  ],
+  "name": "@uscreen-video/v-color",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "unpkg": "dist/index.js",
@@ -19,22 +14,38 @@
     "build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
     "start": "run-p build:watch server"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "babel-preset-vue"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
+  },
+  "postcss": {
+    "plugins": {
+      "postcss-nested": {}
+    }
+  },
   "devDependencies": {
-    "browser-sync": "^2.18.8",
-    "cross-env": "^3.1.4",
-    "npm-run-all": "^4.0.1",
-    "postcss-cssnext": "^3.1.0",
-    "rollup": "^0.59.2",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^7.0.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-postcss": "^1.6.1",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-vue": "^2.2.20"
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "babel-preset-vue": "^2.0.2",
+    "browser-sync": "^2.26.13",
+    "cross-env": "^7.0.2",
+    "npm-run-all": "^4.1.5",
+    "postcss-nested": "4",
+    "rollup": "^2.32.0",
+    "rollup-plugin-vue": "^5.1.9",
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
     "invariant": "^2.2.4",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.20",
     "object-assign": "^4.1.1",
     "pure-color": "^1.3.0",
     "v-ctrl": "^1.1.0"
