--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-nested": "4",
     "rollup": "^2.32.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
     "vue-template-compiler": "^2.6.12"
   },
