--- a/.npmignore
+++ b/.npmignore
@@ -2,7 +2,10 @@ src
 dist/demo.js
 dist/demo.js.map
 .gitignore
+.editorconfig
 .npmignore
 index.html
 rollup.config.js
 yarn.lock
+public
+README.md
